--- a/_includes/clustrmap.html
+++ b/_includes/clustrmap.html
@@ -51,7 +51,7 @@
 				<p class="itemdate">——{{post.date| date: "%Y.%m.%-d  "}}</p>
 				{% endfor%}
 				<br>
-				<!-- <a href="{{ site.data.sitetext.middlecolumn.urlmiddle}}" class="morelist" >{{ site.data.sitetext.middlecolumn.titlereadmore}}</a> -->
+				<<a href="{{ site.data.sitetext.middlecolumn.urlmiddle}}" class="morelist" >{{ site.data.sitetext.middlecolumn.titlereadmore}}</a>
 			</div>			
 			
 			<!--Notice-->
@@ -67,7 +67,8 @@
 				<br>
 				<a href="{{ site.data.sitetext.middlecolumn.urlmiddle}}" class="morelist" >{{ site.data.sitetext.middlecolumn.titlereadmore}}</a>
 			</div>
-			<!-- <div class="col-md-4 col-sm-6 " style="text-align: center;">
+			
+			<!--  已删除部分  <div class="col-md-4 col-sm-6 " style="text-align: center;">
 				<br>
 				<br>
 				<h2 class="section-heading text-uppercase">{{ site.data.sitetext.middlecolumn.titleright}}</h2>
