--- a/_includes/clustrmap.html
+++ b/_includes/clustrmap.html
@@ -58,7 +58,7 @@
 			<div class="col-md-4 col-sm-6 " style="text-align: center;">
 				<br>
 				<br>
-				<h2 class="section-heading text-uppercase">{{ site.data.sitetext.middlecolumn.titlemiddle}}</h2>
+				<h2 class="section-heading text-uppercase">{{ site.data.sitetext.middlecolumn.titleleft}}</h2>
 				<br>
 				{% for post in site.categories.notice limit:3 %}
 				<a class="itemname" href="{{site.baseurl}}{{post.url}}">{{post.subtitle}}</a>
