--- a/_includes/clustrmap.html
+++ b/_includes/clustrmap.html
@@ -37,7 +37,7 @@
 				<p class="itemdate">——{{post.date| date: "%Y.%m.%-d  "}}</p>
 				{% endfor%}
 				<br>
-				<a href="{{ site.data.sitetext.middlecolumn.urlmiddle}}" class="morelist" >{{ site.data.sitetext.middlecolumn.titlereadmore}}</a>
+				<a href="{{ site.data.sitetext.middlecolumn.urlleft}}" class="morelist" >{{ site.data.sitetext.middlecolumn.titlereadmore}}</a>
 			</div>
 			
 			<!--Patent-->
@@ -65,7 +65,7 @@
 				<p class="itemdate">——{{post.date| date: "%Y.%m.%-d  "}}</p>
 				{% endfor%}
 				<br>
-				<a href="{{ site.data.sitetext.middlecolumn.urlmiddle}}" class="morelist" >{{ site.data.sitetext.middlecolumn.titlereadmore}}</a>
+				<a href="{{ site.data.sitetext.middlecolumn.urlright}}" class="morelist" >{{ site.data.sitetext.middlecolumn.titlereadmore}}</a>
 			</div>
 			
 			<!--  已删除部分  <div class="col-md-4 col-sm-6 " style="text-align: center;">
