--- a/_includes/clustrmap.html
+++ b/_includes/clustrmap.html
@@ -46,8 +46,8 @@
 				<br>
 				<h2 class="section-heading text-uppercase">{{ site.data.sitetext.middlecolumn.titlemiddle}}</h2>
 				<br>
-				{% for post in site.categories.patent limit:3 %}
-				<a class="itemname" href="{{site.baseurl}}{{post.url}}">{{post.subtitle}}</a>
+				{% for post in site.data.sitetext.patent.item limit:3 %}
+				<a class="itemname" href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
 				<p class="itemdate">——{{post.date| date: "%Y.%m.%-d  "}}</p>
 				{% endfor%}
 				<br>
