--- a/_includes/clustrmap.html
+++ b/_includes/clustrmap.html
@@ -32,9 +32,9 @@
 				<br>
 				<h2 class="section-heading text-uppercase">{{ site.data.sitetext.middlecolumn.titleleft}}</h2>
 				<br>
-				{% for post in site.categories.paper limit:3 %}
-				<a class="itemname" href="{{site.baseurl}}{{post.url}}">{{post.subtitle}}</a>
-				<p class="itemdate">——{{post.date| date: "%Y.%m.%-d  "}}</p>
+				{% for paper in site.data.sitetext.paper.item %}
+				<a class="itemname" href="{{site.baseurl}}{{paper.url}}">{{paper.title}}</a>
+				<!-- <p class="itemdate">——{{post.date| date: "%Y.%m.%-d  "}}</p> -->
 				{% endfor%}
 				<br>
 				<a href="{{ site.data.sitetext.middlecolumn.urlleft}}" class="morelist" >{{ site.data.sitetext.middlecolumn.titlereadmore}}</a>
@@ -47,8 +47,8 @@
 				<h2 class="section-heading text-uppercase">{{ site.data.sitetext.middlecolumn.titlemiddle}}</h2>
 				<br>
 				{% for post in site.data.sitetext.patent.item limit:3 %}
-				<a class="itemname" href="{{site.baseurl}}{{post.url}}">{{post.title}}</a>
-				<p class="itemdate">——{{post.date| date: "%Y.%m.%-d  "}}</p>
+				<p class="itemname" href="{{site.baseurl}}{{post.url}}">{{post.title}}</p>
+				<!-- <p class="itemdate">——{{post.date| date: "%Y.%m.%-d  "}}</p> -->
 				{% endfor%}
 				<br>
 				<a href="{{ site.data.sitetext.middlecolumn.urlmiddle}}" class="morelist" >{{ site.data.sitetext.middlecolumn.titlereadmore}}</a>
